bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment

spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: bot

  template:
    metadata:
      labels: 
        app: bot
    
    spec:
      containers:
      - name: bot-container

        image: varenikvkusny/link-simplifier:1.3

        command: ["python", "-m", "src.tg_bot.main_bot"]

        resources:
          requests:

            cpu: '50m'
            memory: '64Mi'

          limits:

            cpu: '250m'
            memory: '256Mi'
