app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment

spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels: 
        app: api
    
    spec:
      containers:
      - name: api-container

        image: varenikvkusny/link-simplifier:1.0

        ports:
        - containerPort: 8000

        resources:
          requests:

            cpu: '50m'
            memory: '64Mi'

          limits:

            cpu: '250m'
            memory: '256Mi'
        
---

apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
  - 
    protocol: TCP
    port: 8000
    targetPort: 8000
