ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
  - host: links.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port: 
              number: 8000
